# Huffman.Coding

./: AdaptiveHuffmanCompress.cpp  AdaptiveHuffmanDecompress.cpp  BitIoStream.cpp  CMakeLists.txt  CanonicalCode.cpp  CanonicalCode.hpp  CodeTree.cpp  FrequencyTable.cpp  FrequencyTable.hpp  HuffmanCoder.cpp  HuffmanCoder.hpp  HuffmanCompress.cpp  HuffmanDecompress.cpp  License.md  Readme.md
Include/Huffman/Coding/: BitIoStream.hpp  CodeTree.hpp
Source/: BitIoStream.cpp  CodeTree.cpp  HuffmanDecompress.cpp
